5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/2360/executions/1578_1559.log
== TEST (2019-03-27 19:17:10) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(texto.upper(frase))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.upper(frase))
NameError: name 'texto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:17:24) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(texto.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.upper())
NameError: name 'texto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:17:48) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(texto.upper(frase))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.upper(frase))
NameError: name 'texto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:17:51) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(texto.upper(frase))
-- EXECUTION TIME:
0.188704
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1559/main.py", line 2, in <module>
    print(texto.upper(frase))
NameError: name 'texto' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:19:00) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:19:03) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.167636
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
